# React-on-esp32-talk_02

./: .gitignore  README.md  partitions.csv
components/lcd1306/: CMakeLists.txt  lcd1306.c  lcd1306.h
components/memory/: CMakeLists.txt  nvs_library.c  nvs_library.h
components/wifi/: CMakeLists.txt  connect.c  connect.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/routes/: magnetometer.c  pushBtn.c  toggleLed.c
site/: package-lock.json  package.json  vite.config.ts
site/src/: app.tsx
site/src/components/: GuideModal.tsx  Layout.tsx  LoginForm.tsx  SplashScreen.tsx
site/src/data/: accounts.ts
site/src/utils/: auth.ts
site/src/views/: alarm.tsx  button-push.tsx  logs.tsx  magnetometer.tsx  scene-overview.tsx  servo.tsx  wifi.tsx
